[project]
name = "pmtagger-service"
version = "0.1.0"
description = "PMTagger HTTP service built on WD Tagger models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "huggingface-hub>=1.11.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "python-multipart>=0.0.20",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
pmtagger-service = "app.main:run"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]
torchvision = [
  { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
